--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.android.tools.build:gradle:2.3.3'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
 
 repositories {
+    jcenter()
+    mavenLocal()
     mavenCentral()
 }
 
