--- a/CreditCardEntryDemo/build.gradle
+++ b/CreditCardEntryDemo/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    compileSdkVersion 25
+    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 24
+        targetSdkVersion 25
         applicationId "com.devmarvel.creditcardentry"
         versionCode 1
         versionName "1.0.0"
@@ -27,5 +27,9 @@ android {
 
 dependencies {
     compile project(':CreditCardEntry')
-    compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.android.support:support-compat:25.3.1'
+    compile 'com.android.support:support-core-utils:25.3.1'
+    compile 'com.android.support:support-core-ui:25.3.1'
+    compile 'com.android.support:support-media-compat:25.3.1'
+    compile 'com.android.support:support-fragment:25.3.1'
 }
