--- a/CreditCardEntryDemo/build.gradle
+++ b/CreditCardEntryDemo/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.3'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         applicationId "com.devmarvel.creditcardentry"
         versionCode 1
         versionName "1.0.0"
@@ -27,9 +27,12 @@ android {
 
 dependencies {
     compile project(':CreditCardEntry')
-    compile 'com.android.support:support-compat:25.3.1'
-    compile 'com.android.support:support-core-utils:25.3.1'
-    compile 'com.android.support:support-core-ui:25.3.1'
-    compile 'com.android.support:support-media-compat:25.3.1'
-    compile 'com.android.support:support-fragment:25.3.1'
+
+}
+
+repositories {
+    maven {
+        url 'https://maven.google.com/'
+        name 'Google'
+    }
 }
