--- a/CreditCardEntry/build.gradle
+++ b/CreditCardEntry/build.gradle
@@ -38,6 +38,7 @@ artifacts {
 dependencies {
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support:support-compat:26.1.0'
+    compile 'com.android.support:support-annotations:26.1.0'
     compile 'com.android.support:support-core-utils:26.1.0'
     compile 'com.android.support:support-core-ui:26.1.0'
     compile 'com.android.support:support-media-compat:26.1.0'
