--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 buildscript {
     repositories {
+        mavenLocal()
         jcenter()
         maven {
             url 'https://maven.google.com/'
@@ -7,7 +8,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-alpha03'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
     }
 }
@@ -17,5 +18,5 @@ repositories {
 }
 
 task wrapper(type: Wrapper) {
-        gradleVersion = '3.1'
+    gradleVersion = '3.1'
 }
