--- a/CreditCardEntry/build.gradle
+++ b/CreditCardEntry/build.gradle
@@ -1,9 +1,10 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
+group='com.github.tipsi'
+
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 16
@@ -36,9 +37,9 @@ artifacts {
 }
 
 dependencies {
-    compile 'com.android.support:support-compat:25.3.1'
-    compile 'com.android.support:support-core-utils:25.3.1'
-    compile 'com.android.support:support-core-ui:25.3.1'
-    compile 'com.android.support:support-media-compat:25.3.1'
-    compile 'com.android.support:support-fragment:25.3.1'
+    implementation 'com.android.support:support-compat:25.3.1'
+    implementation 'com.android.support:support-core-utils:25.3.1'
+    implementation 'com.android.support:support-core-ui:25.3.1'
+    implementation 'com.android.support:support-media-compat:25.3.1'
+    implementation 'com.android.support:support-fragment:25.3.1'
 }
