--- a/CreditCardEntryDemo/build.gradle
+++ b/CreditCardEntryDemo/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.3'
 
     defaultConfig {
         minSdkVersion 16
@@ -26,10 +25,10 @@ android {
 }
 
 dependencies {
-    compile project(':CreditCardEntry')
-    compile 'com.android.support:support-compat:25.3.1'
-    compile 'com.android.support:support-core-utils:25.3.1'
-    compile 'com.android.support:support-core-ui:25.3.1'
-    compile 'com.android.support:support-media-compat:25.3.1'
-    compile 'com.android.support:support-fragment:25.3.1'
+    implementation project(':CreditCardEntry')
+    implementation 'com.android.support:support-compat:25.3.1'
+    implementation 'com.android.support:support-core-utils:25.3.1'
+    implementation 'com.android.support:support-core-ui:25.3.1'
+    implementation 'com.android.support:support-media-compat:25.3.1'
+    implementation 'com.android.support:support-fragment:25.3.1'
 }
